# teledrop

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  Dockerfile  LICENSE  README.ko.md  README.md  config.py  docker-compose.yml  init.py  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-image.yml  docker-production.yml
api/: config.py  deps.py  exceptions.py  models.py  router.py  schema.py  security.py  utils.py
api/auth/: router.py  schema.py  service.py
api/common/: router.py  schema.py  service.py
api/db/: core.py  init.py  model.py
api/delete/: router.py  service.py
api/download/: router.py  schema.py  service.py
api/exceptions/: post_exceptions.py  user_exceptions.py
api/repositories/: __init__.py  api_key_repository.py  content_repository.py  file_repository.py  post_repository.py  user_repository.py
api/router/: __init__.py  auth.py  post.py  utils.py
api/routers/: __init__.py  api_key_router.py  auth_router.py  content_router.py  dependencies.py  post_router.py  user_router.py
api/services/: __init__.py  api_key_service.py  auth_service.py  content_service.py  post_service.py  user_service.py
api/upload/: router.py  schema.py  service.py
app/: main.py
app/core/: __init__.py  config.py  dependencies.py  (+1 more)
db/: core.py  model.py
docs/: api_endpoints.md  file_io_architecture.md  git-branching-strategy.md  git-workflow-checklist.md  handler_di_pattern.md  http_streaming.md
nginx/: nginx.conf
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
(+175 files in other folders)
